--- a/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
+++ b/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
@@ -54,23 +54,43 @@
 			<ColumnDefinition Width="4*" />
 		</Grid.ColumnDefinitions>
 
-		<StackPanel Orientation="Horizontal"
+		<StackPanel Grid.ColumnSpan="2"
+					Orientation="Horizontal"
 					HorizontalAlignment="Center"
-					Grid.ColumnSpan="2"
-					Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=Inverted}">
-			<TextBlock Text="Select your account region "
-					   Focusable="True"
-					   VerticalAlignment="Center" />
-			<RadioButton Content="EU"
-						 Margin="2"
-						 Padding="0"
-						 VerticalContentAlignment="Center"
-						 IsChecked="{Binding SelectedRegion, ConverterParameter={x:Static root:Constants.CloudEUUrl}, Converter={StaticResource RadioButtonCheckedConverter}}"/>
-			<RadioButton Content="US"
-						 Margin="2"
-						 Padding="0"
-						 VerticalContentAlignment="Center"
-						 IsChecked="{Binding SelectedRegion, ConverterParameter={x:Static root:Constants.CloudUSUrl}, Converter={StaticResource RadioButtonCheckedConverter}}" />
+					Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=Inverted}"
+					VerticalAlignment="Center">
+			<TextBlock Name="RegionSelector"
+					   Text="Select your account region "
+					   VerticalAlignment="Top" />
+
+			<StackPanel x:Name="RegionSelectorStackPanel"
+						Grid.ColumnSpan="2"
+						HorizontalAlignment="Center"
+						KeyboardNavigation.DirectionalNavigation="Cycle">
+
+				<RadioButton x:Name="EU_RegionRadioButton"
+							 Content="EU"
+							 AutomationProperties.PositionInSet="1"
+							 AutomationProperties.SizeOfSet="2"
+							 Margin="2"
+							 Padding="0"
+							 IsTabStop="True"
+							 VerticalContentAlignment="Center"
+							 IsChecked="{Binding SelectedRegion, ConverterParameter={x:Static root:Constants.CloudEUUrl}, Converter={StaticResource RadioButtonCheckedConverter}}"
+							 PreviewKeyDown="RadioButton_PreviewKeyDown" 
+							 GotFocus="RegionRadioButton_GotFocus"/>
+				
+				<RadioButton x:Name="US_RegionRadioButton" Content="US"
+							 AutomationProperties.PositionInSet="2"
+							 AutomationProperties.SizeOfSet="2"
+							 Margin="2"
+							 Padding="0"
+							 IsTabStop="True"
+							 VerticalContentAlignment="Center"
+							 IsChecked="{Binding SelectedRegion, ConverterParameter={x:Static root:Constants.CloudUSUrl}, Converter={StaticResource RadioButtonCheckedConverter}}"
+							 PreviewKeyDown="RadioButton_PreviewKeyDown"
+							 GotFocus="RegionRadioButton_GotFocus"/>
+			</StackPanel>
 		</StackPanel>
 
 		<TextBlock Text="{Binding SelectedRegionUIMessage}"
@@ -84,7 +104,7 @@
 					Grid.ColumnSpan="2"
 					Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=Inverted}">
 
-			<Button Content="{x:Static root:PluginResources.Auth_SSO}"
+			<Button x:Name="FederatedSSOButon" Content="{x:Static root:PluginResources.Auth_SSO}"
 					Style="{StaticResource Sdl.Button.PrimaryStyle}"
 					Command="{Binding Auth0SignInCommand}"
 					ToolTip="{x:Static root:PluginResources.Auth_Cloud_SSO_Tooltip}"
