Open drop down of multiselect combobox directly when clicked on

--- a/InterpretBank/InterpretBank/Controls/ChooseFilepathControl.xaml
+++ b/InterpretBank/InterpretBank/Controls/ChooseFilepathControl.xaml
@@ -33,6 +33,7 @@
                       IsEditable="True"
                       x:Name="FilepathCombobox"
                       Text="Select file path..."
+                      SelectionChanged="FilepathCombobox_OnSelectionChanged"
                       IsReadOnly="False"
                       MinWidth="50"
                       SelectedItem="{Binding Filepath, ElementName=Root, UpdateSourceTrigger=PropertyChanged}"
