--- a/InterpretBank/InterpretBank/Controls/GlossariesOrTagsControl.xaml
+++ b/InterpretBank/InterpretBank/Controls/GlossariesOrTagsControl.xaml
@@ -98,6 +98,7 @@
                                  Grid.Row="2"
                                  x:Name="TagsMultiselectCombobox"
                                  AutomationProperties.Name="TagsMultiselectCombobox"
+                                 OpenDropDownListAlsoWhenNotInEditMode="True"
                                  IsEnabled="{Binding IsDbValid}"
                                  Height="{Binding ActualHeight, ElementName=Root, Converter={StaticResource RatioConverter}, ConverterParameter=0.75}"
                                  SelectedItems="{Binding SelectedTags, Mode=TwoWay, ValidatesOnDataErrors=True}"
@@ -112,6 +113,7 @@
                                  Grid.Row="2"
                                  AutomationProperties.Name="GlossariesMultiselectCombobox"
                                  IsEnabled="{Binding IsDbValid}"
+                                 OpenDropDownListAlsoWhenNotInEditMode="True"
                                  Height="{Binding ActualHeight, ElementName=Root, Converter={StaticResource RatioConverter}, ConverterParameter=0.75}"
                                  Visibility="{Binding IsChecked, ElementName=TagsOrGlossariesToggleButton, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=False}"
                                  SelectedItems="{Binding SelectedGlossaries, Mode=TwoWay, ValidatesOnDataErrors=True}"
