--- a/LanguageWeaverProvider/View/PairMappingView.xaml
+++ b/LanguageWeaverProvider/View/PairMappingView.xaml
@@ -7,10 +7,12 @@
         xmlns:view="clr-namespace:LanguageWeaverProvider.View"
         xmlns:local="clr-namespace:LanguageWeaverProvider.ViewModel"
         xmlns:controls="clr-namespace:LanguageWeaverProvider.Controls"
-        xmlns:viewModel="clr-namespace:LanguageWeaverProvider.ViewModel"
-        xmlns:converters="clr-namespace:LanguageWeaverProvider.Converters"
-        mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance local:PairMappingViewModel}"
+		xmlns:models="clr-namespace:LanguageWeaverProvider.Model"
+		xmlns:viewModel="clr-namespace:LanguageWeaverProvider.ViewModel"
+		xmlns:converters="clr-namespace:LanguageWeaverProvider.Converters"
+		xmlns:lmpConverters="clr-namespace:LanguageMappingProvider;assembly=LanguageMappingProvider"
+		mc:Ignorable="d"
+		d:DataContext="{d:DesignInstance local:PairMappingViewModel}"
         MouseLeftButtonDown="Window_MouseLeftButtonDown"
         WindowStartupLocation="CenterScreen"
         Title="{Binding WindowTitle}"
@@ -64,14 +66,24 @@
 
 			<converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
 			<converters:EmptyStringToBooleanConverter x:Key="EmptyStringToBooleanConverter" />
+			<converters:CollectionToCollectionConverter x:Key="CollectionToCollectionConverter" />
 			<converters:EmptyStringToVisibilityConverter x:Key="EmptyStringToVisibilityConverter" />
-            <converters:EmptyCollectionToVisibilityConverter x:Key="EmptyCollectionToVisibilityConverter" />
+			<converters:EmptyCollectionToVisibilityConverter x:Key="EmptyCollectionToVisibilityConverter" />
+			<lmpConverters:LanguageCodeToColorConverter x:Key="LanguageCodeToColorConverter" />
 
-            <DataTemplate DataType="{x:Type viewModel:SettingsViewModel}">
+			<DataTemplate DataType="{x:Type viewModel:SettingsViewModel}">
                 <view:SettingsView />
             </DataTemplate>
 
-        </ResourceDictionary>
+			<Style x:Key="CustomDataGridTextBlockStyle"
+				   TargetType="TextBlock">
+				<Setter Property="Padding"
+						Value="4 0" />
+				<Setter Property="VerticalAlignment"
+						Value="Center" />
+			</Style>
+
+		</ResourceDictionary>
     </Window.Resources>
 
     <Grid>
@@ -179,54 +191,41 @@
                           AutoGenerateColumns="False"
                           Margin="16 0 16 0">
 
-                    <DataGrid.Columns>
-                        <DataGridTemplateColumn Header="{x:Static root:PluginResources.CloudMappingView_Headers_Pairs}"
-                                                Width="1.5*"
-                                                IsReadOnly="True">
-                            <DataGridTemplateColumn.CellTemplate>
-                                <DataTemplate>
-                                    <TextBlock Text="{Binding DisplayName}"
-                                               VerticalAlignment="Center"
-                                               Margin="4 0" />
-                                </DataTemplate>
-                            </DataGridTemplateColumn.CellTemplate>
-                        </DataGridTemplateColumn>
+					<DataGrid.Columns>
 
-                        <DataGridTemplateColumn Header="{x:Static root:PluginResources.CloudMappingView_Headers_Source}"
-                                                MinWidth="64">
-                            <DataGridTemplateColumn.CellTemplate>
-                                <DataTemplate>
-                                    <StackPanel VerticalAlignment="Center"
-                                                Margin="4 0">
-                                        <TextBlock Text="{Binding SourceCode}"
-                                                   Visibility="{Binding SourceCode, Converter={StaticResource EmptyStringToVisibilityConverter}}" />
-                                        <TextBlock Text="{x:Static root:PluginResources.CloudMappingView_Values_NotSet}"
-                                                   Foreground="#f24d41"
-                                                   FontWeight="DemiBold"
-                                                   Visibility="{Binding SourceCode, Converter={StaticResource EmptyStringToVisibilityConverter}, ConverterParameter=Inverted}" />
-                                    </StackPanel>
-                                </DataTemplate>
-                            </DataGridTemplateColumn.CellTemplate>
-                        </DataGridTemplateColumn>
+						<DataGridTextColumn Header="{x:Static root:PluginResources.CloudMappingView_Headers_Pairs}"
+											Binding="{Binding DisplayName}"
+											ElementStyle="{StaticResource CustomDataGridTextBlockStyle}"
+											IsReadOnly="True"
+											Width="1.5*" />
 
-                        <DataGridTemplateColumn Header="{x:Static root:PluginResources.CloudMappingView_Headers_Target}"
-                                                MinWidth="64">
-                            <DataGridTemplateColumn.CellTemplate>
-                                <DataTemplate>
-                                    <StackPanel VerticalAlignment="Center"
-                                                Margin="4 0">
-                                        <TextBlock Text="{Binding TargetCode}"
-                                                   Visibility="{Binding TargetCode, Converter={StaticResource EmptyStringToVisibilityConverter}}" />
-                                        <TextBlock Text="{x:Static root:PluginResources.CloudMappingView_Values_NotSet}"
-                                                   Foreground="#f24d41"
-                                                   FontWeight="DemiBold"
-                                                   Visibility="{Binding TargetCode, Converter={StaticResource EmptyStringToVisibilityConverter}, ConverterParameter=Inverted}" />
-                                    </StackPanel>
-                                </DataTemplate>
-                            </DataGridTemplateColumn.CellTemplate>
-                        </DataGridTemplateColumn>
+						<DataGridTextColumn Header="{x:Static root:PluginResources.CloudMappingView_Headers_Source}"
+											Binding="{Binding SourceCode}"
+											IsReadOnly="True"
+											Width="64">
+							<DataGridTextColumn.ElementStyle>
+								<Style TargetType="TextBlock"
+									   BasedOn="{StaticResource CustomDataGridTextBlockStyle}">
+									<Setter Property="Foreground"
+											Value="{Binding Path=SourceCode, Converter={StaticResource LanguageCodeToColorConverter}, ConverterParameter=#f24d41}" />
+								</Style>
+							</DataGridTextColumn.ElementStyle>
+						</DataGridTextColumn>
 
-                        <DataGridTemplateColumn Header="{x:Static root:PluginResources.CloudMappingView_Headers_Models}"
+						<DataGridTextColumn Header="{x:Static root:PluginResources.CloudMappingView_Headers_Target}"
+											Binding="{Binding TargetCode}"
+											IsReadOnly="True"
+											MinWidth="64">
+							<DataGridTextColumn.ElementStyle>
+								<Style TargetType="TextBlock"
+									   BasedOn="{StaticResource CustomDataGridTextBlockStyle}">
+									<Setter Property="Foreground"
+											Value="{Binding Path=TargetCode, Converter={StaticResource LanguageCodeToColorConverter}, ConverterParameter=#f24d41}" />
+								</Style>
+							</DataGridTextColumn.ElementStyle>
+						</DataGridTextColumn>
+
+						<DataGridTemplateColumn Header="{x:Static root:PluginResources.CloudMappingView_Headers_Models}"
                                                 MinWidth="128">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
